[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = '1.4.0'

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.serde_json]
version = '1.0'

[dependencies.rocket]
version = '0.5.0-rc.1'
features = ['json']

[dependencies.rocket_contrib]
default-features = false
features = [
    'json',
    'handlebars_templates',
]
version = '0.4.8'

[dependencies.pos_blockchain]
path = '../pos_blockchain'