[package]
name = 'websockets'
version = '0.1.0'
edition = '2021'

[dependencies]
tokio-stream = '0.1.6'
warp = '0.3'
serde_json = '1.0'

[dependencies.tokio]
version = '1'
features = ['full']

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.futures]
version = '0.3'
default-features = false

[dependencies.uuid]
version = '0.8.2'
features = [
    'serde',
    'v4',
]
